fix(controlpad): disable pull down to refresh on mobile

--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -1,5 +1,8 @@
 html {
   min-height: 100%;
+
+  /* Disables pull down to refresh on mobile */
+  overscroll-behavior-y: contain;
 }
 
 body {
